hphp/test/slow/parser/hh-reserved-name-void-1.php.expectf
Fatal error: Cannot use 'Void' as class name as it is reserved in %s on line 3
